# tauri-playground

./: README.md  index.html  package-lock.json  package.json  sample.env
src/: App.tsx  auth.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: about.tsx  admin.tsx  home.tsx  reader.tsx  status.tsx
